# pinocchio-extensions

./: Cargo.toml  EXTENSIONS_STATUS.md  TEMP.md  build.sh  rebuild_proxy.sh  test.sh
cpi-tests/: README.md  test.sh
cpi-tests/programs/token-2022-proxy/: Cargo.toml
cpi-tests/programs/token-2022-proxy/src/: helpers.rs  lib.rs
cpi-tests/programs/token-2022-proxy/src/instructions/: initialize_permanent_delegate.rs  initialize_token_account.rs  mod.rs
cpi-tests/programs/token-2022-proxy/src/instructions/cpi_guard/: disable_guard.rs  enable_guard.rs  mod.rs
cpi-tests/programs/token-2022-proxy/src/instructions/default_account_state/: initialize.rs  update.rs
cpi-tests/programs/token-2022-proxy/src/instructions/group_member_pointer/: initialize.rs  update.rs
cpi-tests/programs/token-2022-proxy/src/instructions/group_pointer/: initialize.rs  update.rs
cpi-tests/programs/token-2022-proxy/src/instructions/interest_bearing_mint/: initialize.rs  mod.rs  update_rate.rs
cpi-tests/programs/token-2022-proxy/src/instructions/memo_transfer/: disable.rs  enable.rs  mod.rs
cpi-tests/programs/token-2022-proxy/src/instructions/metadata_pointer/: initialize.rs  update.rs
cpi-tests/programs/token-2022-proxy/src/instructions/pausable/: initialize.rs  mod.rs  pause.rs  resume.rs
cpi-tests/programs/token-2022-proxy/src/instructions/scaled_ui_amount/: initialize.rs  mod.rs  update_multiplier.rs
cpi-tests/programs/token-2022-proxy/src/instructions/token_group/: initialize.rs  initialize_group.rs  initialize_member.rs  update_group_authority.rs  update_max_size.rs
cpi-tests/programs/token-2022-proxy/src/instructions/transfer_hook/: initialize.rs  update.rs
cpi-tests/tests/: Cargo.toml
cpi-tests/tests/src/: cpi_guard.rs  default_account_state.rs  group_member_pointer.rs  group_pointer.rs  initialize_mint.rs  initialize_token_account.rs  interest_bearing_mint.rs  lib.rs  memo_transfer.rs  metadata_pointer.rs  pausable.rs  permanent_delegate.rs  scaled_ui_amount.rs  token_group.rs  token_group_member.rs  token_metadata.rs  transfer_hook.rs
cpi-tests/tests/src/helpers/extensions/token_2022/: confidential_mint_burn.rs  cpi_guard.rs  default_account_state.rs  group_member_pointer.rs  group_pointer.rs  initialize_mint.rs  initialize_multisig.rs  initialize_token_account.rs  interest_bearing_mint.rs  memo_transfer.rs  metadata_pointer.rs  pausable.rs  permanent_delegate.rs  scaled_ui_amount.rs  token_account.rs  token_group.rs  token_metadata.rs  transfer_hook.rs
cpi-tests/tests/src/helpers/suite/: core.rs  solana_kite.rs  types.rs
examples/token-2022-caller/: Cargo.toml
examples/token-2022-caller/src/: helpers.rs  lib.rs  serde.rs
examples/token-2022-caller/src/instructions/: initialize_mint.rs
examples/token-2022-proxy/: Cargo.toml
examples/token-2022-proxy/src/instructions/: initialize_mint.rs
programs/token-2022/src/: lib.rs
programs/token-2022/src/extension/: consts.rs  mod.rs
programs/token-2022/src/extension/cpi_guard/: state.rs
programs/token-2022/src/extension/cpi_guard/instructions/: disable_guard.rs  enable_guard.rs  mod.rs
programs/token-2022/src/extension/default_account_state/: state.rs
programs/token-2022/src/extension/default_account_state/instructions/: initialize.rs  update.rs
programs/token-2022/src/extension/group_member_pointer/: state.rs
programs/token-2022/src/extension/group_member_pointer/instructions/: initialize.rs  update.rs
programs/token-2022/src/extension/group_pointer/: state.rs
programs/token-2022/src/extension/group_pointer/instructions/: initialize.rs  update.rs
programs/token-2022/src/extension/interest_bearing_mint/: state.rs
programs/token-2022/src/extension/interest_bearing_mint/instructions/: initialize.rs  update_rate.rs
programs/token-2022/src/extension/memo_transfer/: state.rs
programs/token-2022/src/extension/memo_transfer/instructions/: disable.rs  enable.rs
programs/token-2022/src/extension/metadata_pointer/: state.rs
programs/token-2022/src/extension/metadata_pointer/instructions/: initialize.rs  update.rs
programs/token-2022/src/extension/pausable/: state.rs
programs/token-2022/src/extension/pausable/instructions/: initialize.rs  mod.rs  pause.rs  resume.rs
programs/token-2022/src/extension/permanent_delegate/: state.rs
programs/token-2022/src/extension/permanent_delegate/instructions/: initialize.rs
programs/token-2022/src/extension/scaled_ui_amount/: state.rs
programs/token-2022/src/extension/scaled_ui_amount/instructions/: initialize.rs  mod.rs  update_multiplier.rs
programs/token-2022/src/extension/token_group/: state.rs
programs/token-2022/src/extension/token_group/instructions/: initialize_group.rs  initialize_member.rs  update_group_authority.rs  update_max_size.rs
programs/token-2022/src/extension/transfer_hook/: state.rs
programs/token-2022/src/extension/transfer_hook/instructions/: initialize.rs  update.rs
programs/token-2022/src/instructions/: mod.rs
programs/token-2022/src/instructions/extension/: mod.rs
programs/token-2022/src/instructions/extension/group_member_pointer/: constants.rs  initialize.rs  states.rs  update.rs
programs/token-2022/src/instructions/extension/group_pointer/: constants.rs  initialize.rs  mod.rs  states.rs  update.rs
programs/token-2022/src/instructions/extension/permanent_delegate/: constants.rs  initialize.rs  mod.rs  states.rs
programs/token-2022/src/instructions/extension/token_group/: constants.rs  initialize.rs  initialize_group.rs  initialize_member.rs  mod.rs  states.rs  update_group_authority.rs  update_max_size.rs
tests/: Cargo.toml  test.sh
tests/src/: lib.rs  registry.rs
tests/src/helpers/extensions/: registry.rs
tests/src/helpers/extensions/token_2022/: initialize_mint.rs
tests/src/helpers/suite/: core.rs  types.rs
