[workspace]
resolver = "2"
members = [
    "programs/associated-token-account",
    "programs/memo",
    "programs/system",
    "programs/token",
    "programs/token-2022",
    "sdk/log/crate",
    "sdk/log/macro",
    "sdk/pinocchio",
    "sdk/pubkey",
    "tests",
    "examples/*",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anza-xyz/pinocchio"
rust-version = "1.79"

[workspace.dependencies]
five8_const = "0.1.4"
pinocchio = { version = "0.9", path = "sdk/pinocchio" }
pinocchio-log-macro = { version = "0.5", path = "sdk/log/macro" }
pinocchio-pubkey = { version = "0.3", path = "sdk/pubkey" }
quote = "1.0"
regex = "1"
syn = "1.0"

# spl cpi
spl-token-2022-interface = "2.0.0"

# pinocchio cpi
pinocchio-token = { path = "./programs/token" }
pinocchio-token-2022 = { path = "./programs/token-2022" }

# cpi callers
token-2022-caller = { path = "./examples/token-2022-caller" }

# test dependencies
strum = "0.24.1"
strum_macros = "0.24.3"
pretty_assertions = "1.4.1"
litesvm = { git = "https://github.com/M-Daeva/litesvm", branch = "spl-token-2022-interface" }
solana-account = "2.2.1"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"
solana-program = "2.2.1"
solana-compute-budget = "2.2.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
bytemuck = "1.23.2"

[workspace.metadata.cli]
solana = "2.2.0"

[workspace.metadata.toolchains]
build = "1.84.1"
format = "nightly-2024-11-22"
lint = "nightly-2024-11-22"
test = "1.84.1"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.metadata.spellcheck]
config = "scripts/setup/spellcheck.toml"
