[package]
name = "tests"
version = "1.0.0"
description = "litesvm tests"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = []
std = []

[dependencies]
# sdk
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
# pinocchio-log = { workspace = true }

# spl cpi
spl-token-2022-interface = { workspace = true }

# pinocchio cpi
pinocchio-token = { workspace = true }
pinocchio-token-2022 = { workspace = true }

# cpi consumers
token-2022-proxy = { workspace = true }

# for tests
strum = { workspace = true }
strum_macros = { workspace = true }
pretty_assertions = { workspace = true }
litesvm = { workspace = true }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
solana-program = { workspace = true }
solana-program-option = { workspace = true }
solana-program-pack = { workspace = true }
solana-compute-budget = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
bytemuck = { workspace = true }
