[package]
name = "tests"
version = "1.0.0"
description = "litesvm tests"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = []
std = []

[dependencies]
# sdk
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
# pinocchio cpi
pinocchio-token = { workspace = true }
pinocchio-token-2022 = { workspace = true }
# spl cpi
spl-token-group-interface = "0.7.1"
spl-token-2022-interface = "2.0.0"
# cpi consumers
token-2022-proxy = { workspace = true }

# test dependencies
strum = "0.24.1"
strum_macros = "0.24.3"
pretty_assertions = "1.4.1"
litesvm = { git = "https://github.com/M-Daeva/litesvm", branch = "spl-token-2022-interface" }
solana-account = "2.2.1"
solana-address = "1.0.0"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"
solana-program = "2.2.1"
solana-program-option = "3.0.0"
solana-program-pack = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-compute-budget = "2.2.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
spl-pod = "0.7.1"
bytemuck = "1.23.2"
